24-service-account-deploy.yaml
# kubectl-n sun create deployment sunny --image=nginx:1.17.3-alpine --dry-run=client -o yaml > p2_sunny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sunny
  name: sunny
  namespace: sun
spec:
  replicas: 4
  selector:
    matchLabels:
      app: sunny
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sunny
    spec:
      serviceAccountName: sa-sun-deploy
      containers:
      - image: nginx:1.17.3-alpine
        name: nginx
        resources: {}
status: {}
