postgres-test.yaml
---
# PostgreSQL StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
  namespace: test
spec:
  serviceName: postgresql-db-service
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      schedulerName: stork
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - postgresql-db
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: postgresql-db
          image: postgres:latest
          volumeMounts:
            - name: px-test-postgres
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: px-test-postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: portworx-db-sc
        resources:
          requests:
            storage: 2Gi
